updates as per bevan

--- a/content/contact_us.haml
+++ b/content/contact_us.haml
@@ -1,23 +1,20 @@
 .left.main
-  .left
-    %h1 
-      %span.a Pool
-      %span.b Shop
-    %p
-      778 Cascades Road
-      %br
-      Little Falls
-      %br
-      Gauteng
-
-    %p
-      0861 102 013
-      %br
-
-      sales@lexpools.co.za
-  .left
+  .right
     %img{:src=>"/images/flipflops2.png", :style => 'margin: 20px 0 0 20px', :alt=> 'flipflops'}
+  %h1 
+    %span.a Pool
+    %span.b Shop
+  %p
+    778 Cascades Road
+    %br
+    Little Falls
+    %br
+    Gauteng
 
+  %p
+    0861 102 013
+    %br
+    sales@lexpools.co.za
   .clear
   %h1 
     %span.a Email
