--- a/content/saltwater_chlorinators.haml
+++ b/content/saltwater_chlorinators.haml
@@ -24,4 +24,6 @@
     We offer a full on site back-up service on all Zodiac Clearwater Chlorinators, and carry a full range of spares and replacement electrodes.
 .right
   = render 'services'
+.right
+  %img{:src=>"/images/cw_zodiac.png", :alt=> 'ad', :style => 'margin: 10px 0'}
 .clear
