--- a/content/solar_blankets.haml
+++ b/content/solar_blankets.haml
@@ -38,6 +38,8 @@
     Each cover is manufactured from UV treated polyethylene designed to withstand the harshest conditions, extreme chanegs in ambient temprateruse between day and night time periods.
 .right
   = render 'services'
+.right
+  %img{:src=>"/images/suncommand.png", :alt=> 'suncommand', :style => 'margin: 10px 0'}
 .clear
 :JAVASCRIPT
   $(document).ready(function() {
