--- a/content/pool_shop.haml
+++ b/content/pool_shop.haml
@@ -29,7 +29,8 @@
     Monday - Friday
     %br
     7:30am - 5pm
-
+  .right
+    %img{:src=>"/images/burn_out.png", :alt=> 'ad', :style => 'margin: 10px 0'}
   %p
     Saturday
     %br
