update as per joey's email

--- a/content/heat_pumps.haml
+++ b/content/heat_pumps.haml
@@ -15,16 +15,16 @@
     %b Heat pumps are a neat, compact and effective way of heating your pool.
 
   %p
-    Each heat pump has a digitas display showing you the temperature of your pool, all you need to do is simply enter your desired pool temperature and let your heat pump automatically maintain your pool temperature.
+    Each heat pump has a digital display showing you the temperature of your pool, all you need to do is simply enter your desired pool temperature and let your heat pump automatically maintain your pool temperature.
 
   %p
-    Heat pmupms are available in many sizes for splash pools right up to olympic size pools. Most units are graded for an 8-9 month swimming season, however units can be graded to suit year round swimming.
+    Heat pumps are available in many sizes for splash pools right up to olympic size pools. Most units are graded for an 8-9 month swimming season, however units can be graded to suit year round swimming.
 
   %p
     We offer free on-site quotations to ensure you receive the correct size unit to fit your desired temperature and swimming season.
 
   %p
-    We offer you a market leading product backed by superior after sales service, maintenance and spares.
+    We supply market leading products backed by superior after sales service, maintenance and spares.
 
   %h1 
     %span.a AQUATEMP
@@ -39,7 +39,7 @@
     %li Patented double spiral titanium heat exchanger
     %li Hight performance fan
     %li Suitable for use with saltwater chlorinators
-    %li More than 25 years on constant improvement, research and development
+    %li More than 25 years of constant improvement, research and development
     %li Full back-up and spares available
     %li Full weather-proof unit
     %li Brushed stainless steel outer casing with lockable control panel
