--- a/content/index.haml
+++ b/content/index.haml
@@ -19,13 +19,13 @@ title: Home
       There is nothing more inviting than a crystal clear pool at the perfect temperature
 
   %p
-    Since 1998 Lex Pools (CK98/70561/23) has been at the forefront of pool heating and automatic chlorination solutions. Through our vast experience in both the domestic and the commercial swimming pool industry, we can supply and istall high quality systm to staisfy your needs.
+    Since 1998 Lex Pools (CK98/70561/23) has been at the forefront of pool heating and automatic chlorination solutions. Through our vast experience in both the domestic and the commercial swimming pool industry, we can supply and install high quality system to staisfy your needs.
 
   %p
     Our commercial portfolio includes:
     %ul
-      %li Crawfod College (Craigavon)
-      %li Rodean School (Parktown)
+      %li Crawford College (Craigavon)
+      %li Roedean School (Parktown)
       %li St Andrews School for Girls (Bedfordview)
       %li Eastco Holiday Resort (Magaliesberg)
       %li Hillandale Rehab Hospital (Bloemfontein)
@@ -36,7 +36,7 @@ title: Home
     This comprehensive list does not include the more than 50 swimming schools in the Gauteng area that have experienced the Lex Pools treatment.
 
   %p
-    At Lex Pools we are committed to beth quality products and excellent service. With our dedicated, well trained and professional staff you acn be certain of a high qulity installation and premium after sales service.
+    At Lex Pools we are committed to beth quality products and excellent service. With our dedicated, well trained and professional staff you can be certain of a high quality installation and premium after sales service.
 
 .right
   = render 'services'
