--- a/content/pool_shop.haml
+++ b/content/pool_shop.haml
@@ -15,10 +15,10 @@
     %b Stocked, smart and professional
 
   %p
-    We would love tosee you at our pool shop at 778 Cascades Road, Little Falls where we offer a full range of pool related products.
+    We would love to see you at our pool shop at 778 Cascades Road, Little Falls where we offer a full range of pool related products.
 
   %p
-    As an authorised Bio Guard dealer, we offer computerised water analysis backed by dependable, accurate advice and solutions.
+    As an authorised Bio Guard chemical dealer, we offer computerised water analysis backed by dependable, accurate advice and solutions.
 
   %p
     Our trained technicians provide prompt service and expert advice. Whether you need a new pump, filter, pool light or on-site pool system repairs, call us for a quality installation done right - the first time!
