--- a/content/solar_blankets.haml
+++ b/content/solar_blankets.haml
@@ -11,13 +11,13 @@
     %span.b SOLAR BLANKETS
   %p
     %b
-      Solar pool covers, by design, allows the sun's rays to pass through the cove, adding free heat to your swimming pool and raising its overal temperature by up to 5 degrees.
+      Solar pool covers, by design, allow the sun's rays to pass through the cover, adding free heat to your swimming pool and raising its overall temperature by up to 5 degrees.
 
   %p
     During the night, heat loss will be reduced by 80% when using solar pool covers. These covers can be used where no alternative form of heating is present or extra heat is required in a heated pool.
 
   %p
-    The solar cover is available in royal blue or black and can be sized to suit any shape or size of pool. The cover floats on the pool and does not require any form of fixing to the sides of the pool and roll-up systems are available and con be installed in conjunction with the pool cover.
+    The solar cover is available in royal blue or black and can be sized to suit any shape or size of pool. The cover floats on the pool and does not require any form of fixing to the sides of the pool and roll-up systems are available and can be installed in conjunction with the pool cover.
 
   %p
     %b
@@ -32,10 +32,10 @@
     %li Reduces pool maintenance
 
   %p
-    Each coer comes, as standard, with a solar protection sheet to prevent damage from UV rays when removed from the pool.
+    Each cover comes, as standard, with a solar protection sheet to prevent damage from UV rays when removed from the pool.
 
   %p
-    Each cover is manufactured from UV treated polyethylene designed to withstand the harshest conditions, extreme chanegs in ambient temprateruse between day and night time periods.
+    Each cover is manufactured from UV treated polyethylene designed to withstand the harshest conditions and extreme changes in ambient temperature use between day and night time periods.
 .right
   = render 'services'
 .right
