--- a/content/stylesheets/stylesheet.sass
+++ b/content/stylesheets/stylesheet.sass
@@ -38,15 +38,20 @@ body
           margin: 10px 0
     p, h1, h2, h3, h4
       padding: 0 
-    p
-      font-family: 'Verdana' !important
     ul
       padding: 0 20px
     
   #body
     padding: 0 20px
+    p, ul
+      font-family: 'Verdana'
+  #footer
+    p, ul
+      font-family: 'Verdana'
 
-
+.chlorinator_manuals
+  img
+    cursor: pointer
 
 .clear
   clear: both
