--- a/content/safety_covers.haml
+++ b/content/safety_covers.haml
@@ -14,10 +14,10 @@
       Solid covers provide ultra-protection from the elments for any pool.
 
   %p
-    Solid covers are mode from heavy-duty, reinforced PVC material. They are designed to prevent dirt, dust, leaves and water from entering the pool, offering a 95% reduction on chemical usage and evaporation as well as vastly reducing filtration time. The cove also insulates the surface reulting in decreased heat loss.
+    Solid covers are made from heavy-duty, reinforced PVC material. They are designed to prevent dirt, dust, leaves and water from entering the pool, offering a 95% reduction on chemical usage and evaporation as well as vastly reducing filtration time. The cover also insulates the surface resulting in decreased heat loss.
 
   %p
-    Solid covers can withstand the weight of an adust but should be noted that rainwater can gather on top of the cover posing a drowning risk to small children.
+    Solid covers can withstand the weight of an adult but it should be noted that rainwater can gather on top of the cover posing a drowning risk to small children.
 .right
   = render 'services'
 .clear
