--- a/content/saltwater_chlorinators.haml
+++ b/content/saltwater_chlorinators.haml
@@ -1,13 +1,21 @@
+%ul#products.carousel
+  %li
+    %img{:src=>"/images/carousel/chlorinator1.png", :alt=> 'chlorinator'}
+  %li
+    %img{:src=>"/images/carousel/chlorinator2.png", :alt=> 'chlorinator'}
+  %li
+    %img{:src=>"/images/carousel/chlorinator3.png", :alt=> 'chlorinator'}
+
 .left.main
   %h1 
     %span.a SALTWATER
     %span.b CHLORINATORS
 
   %p
-    %b Sanitizing of swimming pools by saltwater chlorinators is the safest, most effective and environmentally freindly method of all.
+    %b Sanitizing of swimming pools by saltwater chlorinators is the safest, most effective and environmentally friendly method of all.
 
   %p
-    Salt chlorinators generate the chlorine necessary to keep your pool free of bacteria and algae. The chlorinator also produces a small amount of azone which gives your pool that added sparkel and freshness. The result is healthier water that looks great and feels great too. and you can take comfort in the knowledge that your pool is being sanitized even when you aren't around.
+    Salt chlorinators generate the chlorine necessary to keep your pool free of bacteria and algae. The chlorinator also produces a small amount of ozone which gives your pool that added sparkle and freshness. The result is healthier water that looks great and feels great too and you can take comfort in the knowledge that your pool is being sanitized even when you aren't around.
 
   %p
     %b
@@ -22,8 +30,21 @@
 
   %p
     We offer a full on site back-up service on all Zodiac Clearwater Chlorinators, and carry a full range of spares and replacement electrodes.
+  %p
+    As a leading Zodia distributor, we stock all models and sizes available in the chlorinator range. Installations typically take about an hour and are installed within 72 hours of order.
 .right
   = render 'services'
 .right
-  %img{:src=>"/images/cw_zodiac.png", :alt=> 'ad', :style => 'margin: 10px 0'}
+  //%img{:src=>"/images/cw_zodiac.png", :alt=> 'ad', :style => 'margin: 10px 0'}
 .clear
+.chlorinator_manuals
+  %a{:href => "/downloads/c_series_manual.pdf"}
+    %img{:src=>"/images/chlorinators/c_series.png", :alt=> 'c_series manual', :style => 'margin: 10px 0'}
+  %a{:href => "/downloads/ei_series_manual.pdf"}
+    %img{:src=>"/images/chlorinators/ei_series.png", :alt=> 'ei_ei_series manual', :style => 'margin: 10px 0'}
+  %a{:href => "/downloads/tri_series_manual.pdf"}
+    %img{:src=>"/images/chlorinators/c_series.png", :alt=> 'tri_series manual', :style => 'margin: 10px 0'}
+:JAVASCRIPT
+  $(document).ready(function() {
+    $('ul#products').roundabout();
+  });
