--- a/content/solar_heating.haml
+++ b/content/solar_heating.haml
@@ -15,7 +15,7 @@
     %b Using the power of the sun, solar panels provide an energy efficient supply of heated water.
 
   %p
-    Over the last few years the use of solar panels to heat swimming pools has become every more popular. This has seen an influx of many inferior panels offering unrealistic warranties and no back-up service. At Lex Pools we offer top quality panels combined with correct and professional installation.
+    Over the last few years the use of solar panels to heat swimming pools has become ever more popular. This has seen an influx of many inferior panels offering unrealistic warranties and no back-up service. At Lex Pools we offer top quality panels combined with correct and professional installation.
 
   %p
     We have heated thousands of pools of all shapes and sizes, using the proven Sun Command solar panel. The Sun Command panel is manfuactured from UV stabilised polypropylene. All seams are thermo welded and pressure tested ensuring a leak free long lasting panel.
@@ -31,7 +31,7 @@
     %li 5 year panel warranty (panels are not patched but replaced)
     %li Aesthetically pleasing solid type panel (no gaps between tubes)
     %li 218 tubes per panel
-    %li Lare panel surface 3080mm x 1350mm
+    %li Large panel surface 3080mm x 1350mm
     %li Custom sized panels available to suit your roof
     %li UV stabilised for longer lifespan in the sun
     %li Resistant to hail, frost and chemicals
@@ -50,7 +50,7 @@
     %b How it works:
 
   %p
-    The Sun Command solar panel system is an efficient collector of the free enegery availabel from the sun. The panels are mounted onto the roof of your home, or othr suitable structure, and clean filtered water passed through the panels during the day time, by means of your existing pool pump.
+    The Sun Command solar panel system is an efficient collector of the free enegery available from the sun. The panels are mounted onto the roof of your home, or other suitable structure, and clean filtered water is passed through the panels during the day time, by means of your existing pool pump.
 
   %p
     The water rushing through the panels collects the irradiated heat from the sun and is returned to your pool as warmed water. This process is continually repeated throughout the day.
@@ -70,7 +70,7 @@
   %p
     %b Performance
 
-  %p Systems can be graded to suit almost any temperature requirement. Please consult our offices for correct grading. However, must units are graded for an 8-9 month swimming season. Here is a typical heating example.
+  %p Systems can be graded to suit almost any temperature requirement. Please consult our offices for correct grading. However, must units are graded for an 8-9 month swimming season.
   %img{:src=>"/images/solar_performance.png", :alt=> 'performance', :style => 'margin: 10px 0'}
 
 .left{:style => 'width: 400px'}
@@ -78,7 +78,7 @@
     %b Panel Efficiency
 
   %p
-    A solar panel is most effective on a north facing roof at a 30 degree pitch. Other angles and directions can be effectie, however this needs to be taken into account when grading the system.
+    A solar panel is most effective on a north facing roof at a 30 degree pitch. Other angles and directions can be effective, however this needs to be taken into account when grading the system.
   %img{:src=>"/images/solar_efficiency.png", :alt=> 'suncommand', :style => 'margin: 10px 0'}
 
 .clear
