--- a/layouts/services.haml
+++ b/layouts/services.haml
@@ -4,9 +4,9 @@
     %li Solar Heating
     %li Electric Pool Heating
     %li Saltwater Chlorinators
-    %li Pool Covers
+    %li Pool Covers & Blankets
     %li Pool Nets
     %li Commercial Covers
-    %li Domestic Pumps
-    %li Water Testings
+    %li Pool Pumps & Filters
+    %li Water Testing
     %li Pool Accessories
