--- a/layouts/site.haml
+++ b/layouts/site.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title
+    %title Lex Pools
     %link{:href => "/styles.css", :rel => "stylesheet", :type => "text/css"}
     %script{:type => "text/javascript", :src => "/js/jquery-1.6.4.min.js"}
     %script{:type => "text/javascript", :src => "/js/slides.min.jquery.js"}
